--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,7 +4,9 @@ Development
 3.0.0
 -----
 - Upgrade to gulp 4.x.
-- Remove deprecated gulp-util usage
+- Remove deprecated gulp-util usage.
+- Remove deprecated gulp-help usage.
+- Remove unused `opts` from all individual tasks.
 
 2.0.0
 -----
